--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     position: relative;
-    margin-top: 30vh;
+    margin-top: 50vh;
     transform: translateY(-50%);
     text-align: center;
   }
@@ -87,7 +87,7 @@ button {
     }
 
     .layout{
-     
+      margin: 40px;
        display: flex;
       flex-direction: column;
       align-items: center;
@@ -99,13 +99,13 @@ button {
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        margin-bottom: -40px;
+        margin-bottom: -50px;
 
     }
 
     #session-increment, #session-decrement, #break-increment, #break-decrement {
-      font-size: 22px;
-      
+      font-size: 20px;
+      margin: 15px;
     }
     
     #break-length, #session-length{
