--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ button {
     }
 
     h1{
+      margin-top: -30px;
       font-size: 35px;
     }
 
@@ -116,8 +117,9 @@ button {
     }
     
     .timer-elements {
-      margin-top: 130px;
+      margin-top: 160px;
       font-size: 40px;
+      margin-bottom: 70px;
     }
     
     button {
@@ -125,7 +127,7 @@ button {
         width: 180px;
         height: 50px;
         padding: 10px;
-        margin-top: 10px;
+        margin-top: 15px;
         font-size: 20px;
     
     
