--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ body {
 
 .wrapper {
     position: relative;
-    margin-top: 50vh;
-    transform: translateY(-50%);
     text-align: center;
   }
 
@@ -51,7 +49,7 @@ h1 {
 .timer {
     display: flex;
     justify-content: center;
-    margin-top: 230px;
+    margin-top: 190px;
     font-family: 'Orbitron', sans-serif;
     
 
@@ -74,6 +72,7 @@ button {
     background-color: red;
     color: white;
     font-size: 28px;
+    cursor: pointer;
    
 }
 
@@ -88,7 +87,7 @@ button {
     }
 
     .layout{
-      margin: 40px;
+      
        display: flex;
       flex-direction: column;
       align-items: center;
@@ -129,6 +128,7 @@ button {
         padding: 10px;
         margin-top: 15px;
         font-size: 20px;
+        cursor: pointer;
     
     
   }
