--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    margin: 120;
+    margin: ;
     background-image: url(Tomato.jpg) ;
     background-repeat: no-repeat;
     background-size: 700px;
@@ -17,6 +17,7 @@ body {
 .wrapper {
     position: relative;
     text-align: center;
+    justify-content: center;
   }
 
 
@@ -76,13 +77,13 @@ button {
    
 }
 
-@media (max-width: 600px) {
+@media (max-width: 600px){
     body {
       background-size: 400px;
     }
 
     h1{
-      margin-top: -30px;
+      margin-bottom: -30px;
       font-size: 35px;
     }
 
@@ -91,6 +92,7 @@ button {
        display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
 
     }
 
@@ -116,7 +118,7 @@ button {
     }
     
     .timer-elements {
-      margin-top: 160px;
+      margin-top: 210px;
       font-size: 40px;
       margin-bottom: 70px;
     }
@@ -132,4 +134,26 @@ button {
     
     
   }
+}
+
+@media (max-height: 600px) {
+  body {
+    
+  background-size: 400px;}
+
+
+.timer-elements {
+  font-size: 40px;
+  margin-top: -150px
+}
+
+button {
+        margin-top: 20px;
+        width: 120px;
+        height: 50px;
+        padding: 10px;
+        
+        font-size: 20px;
+        cursor: pointer;
+}
 }
