--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-size: 700px;
     background-position: center;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-blend-mode: darken;
     margin-top: 0px;
     color: white;
