--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin-top: 0px;
     color: white;
     background-color: rgb(241, 218, 214);
-    overflow: hidden;
+    /*overflow: hidden;*/
     
 }
 
